certs/http-dummy.yaml
apiVersion: v1
kind: Service
metadata:
  name: http-dummy
  namespace: cert-sync
spec:
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: http-dummy
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: http-dummy
  namespace: cert-sync
spec:
  replicas: 1
  selector:
    matchLabels:
      app: http-dummy
  template:
    metadata:
      labels:
        app: http-dummy
    spec:
      containers:
      - name: http-dummy
        image: nginx:alpine
